# LiDAR-Processing-V2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis.txt  build.sh  clean.sh  launch.sh  package.xml
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CMakeLists.txt  README.md
launch/: launch.py
libraries/lidar_processing_lib/: CMakeLists.txt
libraries/lidar_processing_lib/cmake/: Config.cmake.in
libraries/utilities_lib/: CMakeLists.txt
libraries/utilities_lib/include/utilities_lib/: static_vector.hpp
libraries/utilities_lib/tests/: test_static_vector.cpp
libs/lidar_processing_lib/: CMakeLists.txt
libs/lidar_processing_lib/cmake/: lidar_processing_libConfig.cmake.in
libs/lidar_processing_lib/include/lidar_processing_lib/: circular_queue.hpp  clusterer.hpp  common.hpp  kdtree.hpp  stack.hpp  vector.hpp
libs/lidar_processing_lib/src/: clusterer.cpp  noise_remover.cpp  segmenter.cpp
libs/lidar_processing_lib/tests/: test_circular_deque.cpp
lidar_processing_lib/: CMakeLists.txt
lidar_processing_lib/include/lidar_processing_lib/: avl_tree.hpp  buffer.hpp  circular_deque.hpp  circular_queue.hpp  clusterer.hpp  common.hpp  custom_comparator.hpp  geometry.hpp  kdtree.hpp  noise_remover.hpp  point_types.hpp  polygonizer.hpp  priority_queue.hpp  queue.hpp  segmenter.hpp  stack.hpp  stack_vector.hpp  static_map.hpp  static_set.hpp  static_unordered_map.hpp  static_unordered_set.hpp  union_find.hpp  vector.hpp
lidar_processing_lib/src/: clusterer.cpp  noise_remover.cpp  polygonizer.cpp  segmenter.cpp
lidar_processing_lib/tests/: test_alv_tree.cpp  test_avl_tree.cpp  test_circular_deque.cpp  test_static_map.cpp  test_static_unordered_map.cpp  test_static_unordered_set.cpp
ros2_nodes/dataloader/: CMakeLists.txt  package.xml
ros2_nodes/dataloader/launch/: dataloader.launch.py
ros2_nodes/dataloader/src/: dataloader.cpp
ros2_nodes/processor/: CMakeLists.txt  package.xml
scripts/: build.sh  clean.sh  launch.sh
src/dataloader/: CMakeLists.txt  package.xml
src/dataloader/config/: dataloader.param.yaml
src/dataloader/src/: dataloader.cpp  dataloader.hpp
src/launch_pkg/: CMakeLists.txt  package.xml
src/launch_pkg/launch/: global_launch.py
src/libraries/containers/: CMakeLists.txt  package.xml
src/libraries/containers/cmake/: Config.cmake.in
src/libraries/containers/include/containers/: buffer.hpp  circular_queue.cpp  circular_queue.hpp  hash_table.hpp  priority_queue.hpp  queue.hpp  stack.hpp  unordered_map.hpp  vector.hpp
src/libraries/containers/tests/: test_buffer.cpp  test_circular_queue.cpp  test_queue.cpp  test_vector.cpp
src/libraries/lidar_processing_lib/: CMakeLists.txt  package.xml
src/libraries/lidar_processing_lib/include/lidar_processing_lib/segmentation/: jcp_segmenter.hpp
src/libraries/lidar_processing_lib/src/segmentation/: jcp_segmenter.cpp
src/processor/: CMakeLists.txt  package.xml
src/processor/config/: processor.param.yaml
src/processor/src/: buffer.hpp  circular_deque.hpp  circular_queue.hpp  clusterer.cpp  clusterer.hpp  common.cpp  noise_remover.cpp  noise_remover.hpp  polygonizer.cpp  polygonizer.hpp  priority_queue.hpp  processor.cpp  processor.hpp  queue.hpp  segmenter.cpp  segmenter.hpp  stack.hpp  vector.hpp
src/processor/tests/: test_circular_deque.cpp
src/ros2_nodes/dataloader/: CMakeLists.txt  package.xml
src/ros2_nodes/dataloader/config/: dataloader.param.yaml
src/ros2_nodes/dataloader/launch/: dataloader.launch.py
src/ros2_nodes/dataloader/src/: circular_queue.cpp  circular_queue.hpp  clusterer_1d.cpp  clusterer_1d.hpp  dataloader.cpp
src/ros2_nodes/processor/: CMakeLists.txt  package.xml
src/ros2_nodes/processor/include/: jcp_segmenter.cpp  jcp_segmenter.hpp
src/ros2_nodes/processor/launch/: processor.launch.py
src/ros2_nodes/processor/src/: processor.cpp  segmenter.cpp  segmenter.hpp
src/rviz2_config/: CMakeLists.txt  package.xml
src/rviz2_config/config/: rviz2_config.rviz
visualization/: rviz2_config.rviz
