<?xml version="1.0"?>
<package format="3">
    <name>lidar_processing_v2</name>
    <version>0.0.0</version>
    <description>Package for processing LiDAR data</description>

    <maintainer email="yevgeniy.engineer@gmail.com">Yevgeniy Simonov</maintainer>
    <license>GPL-3.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>dataloader</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
