<?xml version="1.0"?>
<package format="3">
    <name>processor</name>
    <version>0.0.0</version>
    <description>ROS2 LiDAR data processing node</description>

    <maintainer email="yevgeniy.engineer@gmail.com">Yevgeniy Simonov</maintainer>
    <license>GPL-3.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>

</package>
