<?xml version="1.0"?>
<package format="3">
    <name>launch_pkg</name>
    <version>0.0.0</version>
    <description>ROS2 launcher</description>

    <maintainer email="yevgeniy.engineer@gmail.com">Yevgeniy Simonov</maintainer>
    <license>GPL-3.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
