<?xml version="1.0"?>
<package format="3">
    <name>containers</name>
    <version>0.0.0</version>
    <description>A shared library for specialized containers and data structures.</description>

    <maintainer email="yevgeniy.engineer@gmail.com">Yevgeniy Simonov</maintainer>
    <license>GPL-3.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Testing dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
