<?xml version="1.0"?>
<package format="3">
    <name>lidar_processing_lib</name>
    <version>1.0.0</version>
    <description>A shared library for LiDAR processing using OpenCV, PCL, and Eigen3.</description>

    <maintainer email="yevgeniy.engineer@gmail.com">Yevgeniy Simonov</maintainer>
    <license>GPL-3.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Dependencies for building -->
    <build_depend>opencv</build_depend>
    <build_depend>pcl</build_depend>
    <build_depend>eigen3_cmake_module</build_depend>

    <!-- Dependencies needed for linking and runtime -->
    <build_export_depend>opencv</build_export_depend>
    <build_export_depend>pcl</build_export_depend>
    <build_export_depend>eigen3_cmake_module</build_export_depend>

    <!-- Runtime dependencies -->
    <exec_depend>opencv</exec_depend>
    <exec_depend>pcl</exec_depend>

    <!-- Testing dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
